--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ This is a little project for creating a Neo4j graph from link:https://www.though
 = Get started
 
 * link:http://neo4j.com/download[Download and install Neo4j]
-* Copy link:import/blips.csv[`import/blips.csv] into Neo4j's `import` directory
+* Copy link:import/blips.csv[`import/blips.csv`] into Neo4j's `import` directory
 * Import the Tech Radar:
 
 ```
