--- a/README.adoc
+++ b/README.adoc
@@ -19,10 +19,10 @@ git clone git@github.com:mneedham/neo4j-thoughtworks-radar.git
 cd neo4j-thoughtworks-radar.git
 ```
 
-* Copy link:import/blips.csv[`import/blips.csv`] into Neo4j's `import` directory
+* Copy link:import/entries.csv[`import/entries.csv`] into Neo4j's `import` directory
 
 ```
-cp import/blips.csv /path/to/neo4j/import
+cp import/entries.csv /path/to/neo4j/import
 ```
 
 * Import the Tech Radar:
